--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
-    "eject": "expo eject"
+    "eject": "expo eject",
+    "react-devtools": "react-devtools"
   },
   "dependencies": {
     "@react-native-community/masked-view": "0.1.6",
@@ -35,6 +36,7 @@
     "cz-conventional-changelog": "3.2.0",
     "cz-emoji": "^1.2.1",
     "husky": "^4.2.5",
+    "react-devtools": "^4.7.0",
     "typescript": "~3.8.3"
   },
   "private": true,
