--- a/src/assets/application.json
+++ b/src/assets/application.json
@@ -14,7 +14,7 @@
         },
         "height": {
           "value": 1.8,
-          "unity": "meters"
+          "unity": "m"
         },
         "universe": "Terra 616"
       },
@@ -47,7 +47,7 @@
         },
         "height": {
           "value": 1.83,
-          "unity": "meters"
+          "unity": "m"
         },
         "universe": "Terra 616"
       },
@@ -79,7 +79,7 @@
         },
         "height": {
           "value": 1.85,
-          "unity": "meters"
+          "unity": "m"
         },
         "universe": "Terra 616"
       },
@@ -119,7 +119,7 @@
         },
         "height": {
           "value": 1.88,
-          "unity": "meters"
+          "unity": "m"
         },
         "universe": "Terra 616"
       },
@@ -146,7 +146,7 @@
         },
         "height": {
           "value": 1.92,
-          "unity": "meters"
+          "unity": "m"
         },
         "universe": "Terra 616"
       },
@@ -176,7 +176,7 @@
         },
         "height": {
           "value": 1.93,
-          "unity": "meters"
+          "unity": "m"
         },
         "universe": "Terra 616"
       },
@@ -205,7 +205,7 @@
         },
         "height": {
           "value": 1.88,
-          "unity": "meters"
+          "unity": "m"
         },
         "universe": "Terra 616"
       },
@@ -232,7 +232,7 @@
         },
         "height": {
           "value": 1.92,
-          "unity": "meters"
+          "unity": "m"
         },
         "universe": "Terra 616"
       },
@@ -259,7 +259,7 @@
         },
         "height": {
           "value": 1.87,
-          "unity": "meters"
+          "unity": "m"
         },
         "universe": "Terra 616"
       },
@@ -288,7 +288,7 @@
         },
         "height": {
           "value": 2.15,
-          "unity": "meters"
+          "unity": "m"
         },
         "universe": "Terra 616"
       },
@@ -319,7 +319,7 @@
         },
         "height": {
           "value": 1.9,
-          "unity": "meters"
+          "unity": "m"
         },
         "universe": "Terra 616"
       },
@@ -349,7 +349,7 @@
         },
         "height": {
           "value": 1.93,
-          "unity": "meters"
+          "unity": "m"
         },
         "universe": "Terra 616"
       },
@@ -378,7 +378,7 @@
         },
         "height": {
           "value": 1.77,
-          "unity": "meters"
+          "unity": "m"
         },
         "universe": "Terra 616"
       },
@@ -412,7 +412,7 @@
         },
         "height": {
           "value": 1.72,
-          "unity": "meters"
+          "unity": "m"
         },
         "universe": "Terra 616"
       },
@@ -443,7 +443,7 @@
         },
         "height": {
           "value": 1.85,
-          "unity": "meters"
+          "unity": "m"
         },
         "universe": "Terra 616"
       },
